tests/ui/resolve/crate-called-as-function.stderr
error[E0425]: cannot find external crate `foo` in the crate root
  --> $DIR/crate-called-as-function.rs:2:7
   |
LL |     ::foo()
   |       ^^^ not found in the crate root

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
