tests/ui/resolve/crate-called-as-function.rs
fn main() {
    ::foo() //~ ERROR cannot find external crate `foo` in the crate root
}
